@@ -1,3 +1,9 @@
+2001-09-06  Sam Steingold  <sds@gnu.org>
+
+	* macros1.lisp (case-expand): new function
+	(case): use it
+	(fcase): new macro
+
 2001-09-05  Sam Steingold  <sds@gnu.org>
 
 	* reploop.lisp (debug-backtrace): print the number of frames
